# transparenciaciudadana

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: daily-ingest.yml
app/: app.py
backend/: __init__.py  db.py  main.py  requirements.txt
data/: lake.duckdb
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  webpack-runtime.js
frontend/.next/server/vendor-chunks/: @babel.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  internmap.js  lodash.js  next.js  object-assign.js  prop-types.js  react-is.js  react-smooth.js  react-transition-group.js  recharts-scale.js  recharts.js  tiny-invariant.js  victory-vendor.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/types/app/: layout.ts
frontend/src/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/src/components/: analytics.tsx  cookie-consent.tsx  dashboard.tsx  data-table-tools.tsx  portal-layout.tsx
frontend/src/hooks/: use-filter-params.ts
frontend/src/lib/: api.ts  brand.ts  column-labels.ts  consent.ts  tracking.ts
scripts/: __init__.py  backup_before_replace.py  check_db.py  download_guatecompras.py  ingest.py  ingest.sh  ingest_all.py  ingest_logging.py  update_manifest_and_changelog.py
sql/: init_raw.sql  schema.sql
(+299 files in other folders)
